rtg_tests/negative/duplicate_main/go.mod
module example.com/rtgtests/negative/duplicate_main

go 1.25
